waves fix spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,14 +22,13 @@ body {
 #perspective {
   /*margin-left: calc((60vw - 30vmin) / 2);
   margin-top: calc((60vh - 30vmin) / 4);*/
-  padding-left: 85px;
-  width: 50vmin;
+  padding-left: 160px;
+  width: 70vmin;
   height: 50vmin;
   perspective: 60vmin;
 }
 
 #container {
-  width: 90vmin;
   height: 30vmin;
   line-height: 0;
   transform-style: preserve-3d;
